Fix overflow issue on small players with menu open

--- a/src/less/components/video.less
+++ b/src/less/components/video.less
@@ -4,6 +4,11 @@
 
 .plyr--video {
     overflow: hidden;
+
+    // Menu open
+    &.plyr--menu-open {
+        overflow: visible;
+    }
 }
 
 .plyr__video-wrapper {
